# JamReady

./: .gitignore  Cargo.toml  Directory.Build.props  JamReady.sln  LICENSE  LICENSE-MIT  PROJECT_BUILD.md  README.md
.cargo/: config.toml  export.toml
.cargo/completions/: install_completions.ps1
.cargo/scripts/: _DO_NOT_RUN_
.cargo/scripts/debug/: debug_deploy.ps1  debug_test.ps1
.cargo/scripts/installation/: _INSTALL_WIN.ps1  _UNINSTALL_WIN.ps1  completion_script_jam.ps1  completion_script_jam.sh  install_cli.ps1  install_completions.ps1  install_completions.sh  uninstall_cli.ps1  uninstall_completions.sh
.github/workflows/: jam_build.yaml
app/JamReadyApp/: .gitignore  JamReadyApp.sln
app/JamReadyApp/.run/: Run Workspace Manager.run.xml
cli/: Cargo.toml  build.rs
cli/src/: lib.rs
cli/src/_help_text/client/: help.txt
cli/src/_help_text/server/: help.txt
cli/src/_help_text/setup/: help.txt
cli/src/cli_commands/: client.rs  mod.rs  server.rs  setup.rs
cli/src/cli_commands/cli_command_client/: add_command.rs  archive_command.rs  command_add.rs  command_archive.rs  command_commit.rs  command_complete.rs  command_doc.rs  command_get.rs  command_move.rs  command_param.rs  command_query.rs  command_redirect.rs  command_remove.rs  command_rollback.rs  command_struct.rs  command_throw.rs  command_update.rs  command_view.rs  commit_command.rs  complete_command.rs  doc_command.rs  get_command.rs  mod.rs  move_command.rs  param_command.rs  query_command.rs  redirect_command.rs  remove_command.rs  rollback_command.rs  struct_command.rs  throw_command.rs  update_command.rs  view_command.rs
cli/src/cli_commands/cli_command_client/param_comp/: comp.rs  data.rs  mod.rs
cli/src/data/: client_result.rs  database.rs  local_file_map.rs  local_folder_map.rs  member.rs  mod.rs  parameters.rs  workspace.rs
cli/src/help/: .gitignore  help_docs.rs  mod.rs
cli/src/help/_text/: add.txt  move.txt  ownership.txt  remove.txt
cli/src/help/_text/client/: help.txt
cli/src/help/_text/server/: help.txt
cli/src/linker/: linker.rs  linker_config.rs  mod.rs
cli/src/service/: jam_client.rs  jam_command.rs  jam_server.rs  messages.rs  service_utils.rs
cli/src/service/commands/: archive.rs  command_archive.rs  command_commit.rs  command_file.rs  command_show_struct.rs  command_update.rs  command_view.rs  commiter.rs  database_sync.rs  duty_verifier.rs  file_manager.rs  file_struct_renderer.rs  file_transmitter.rs  file_viewer.rs  mod.rs  template.rs  utils_database_sync.rs  utils_file_transmitter.rs  workspace_update.rs
docs/cli_help/: ownership.txt  rollback.txt  search_rule.txt  struct.txt  view.txt
docs/learn-cli/: as-admin_zh_cn.md  as-member_zh_cn.md  quick-start_zh_cn.md
documents/: README_zh.md
gui/: .gitignore  App.axaml  App.axaml.cs  Directory.Build.props  JamReadyGui.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs
gui/Data/: AppConfig.cs
gui/JamReadyExplorer/: App.xaml.cs
gui/Manifest/: AppManifest.manifest
gui/Models/: AppConfig.cs
gui/Plugin_FileManager/: Plugin.cs
gui/Plugin_Template/: Plugin.cs  Plugin_Template.csproj
gui/Plugin_Workspace/: BuildPlugin.targets  Plugin.cs  Plugin_Workspace.csproj
gui/ViewModels/: WorkspaceViewModel.cs
gui/Views/: DebugWindow.axaml  DebugWindow.axaml.cs  LinkerTestWindow.axaml  LinkerTestWindow.axaml.cs  WorkspaceWindow.axaml  WorkspaceWindow.axaml.cs
jam-ready-cmd/: Cargo.toml
jam-ready-gui/: .gitignore  JamReadyApp.sln  WorkspaceCreationWindow.xaml
jam-ready-gui/.run/: JamReadyExplorer.run.xml  JamReadyGui.run.xml
jam-ready-gui/JamReadyExplorer/: App.xaml  App.xaml.cs  JamReadyExplorer.csproj
jam-ready-gui/JamReadyGui/: App.xaml  App.xaml.cs  JamReadyGui.csproj  MainWindow.xaml  MainWindow.xaml.cs
jam-ready-gui/JamReady_GUI/: App.xaml  App.xaml.cs  JamReady_GUI.sln  MainWindow.xaml  MainWindow.xaml.cs
jam-ready-gui/Plugin_FileManager/: Plugin.cs  Plugin_FileManager.csproj
jam-ready-gui/Plugin_Workspace/: Plugin.cs
src/utils/: address_str_parser.rs  file_digest.rs  file_operation.rs  hide_folder.rs  levenshtein_distance.rs  local_archive.rs  logger_build.rs  marcos.rs  mod.rs  open_in_explorer.rs  service_runner.rs  text_process.rs
(+159 files in other folders)
