[package]
name = "jam_ready"
description = "JamReady - Accelerate your GameJam, focus on creation! Escape the hassle of asset management!"
authors = [
    "Weicao-CatilGrass (Github)"
]
edition = "2024"

homepage = "https://github.com/CatilGrass/JamReady"
repository = "https://github.com/CatilGrass/JamReady"
readme = "README.md"
license = "MIT"

[dependencies]
chrono = "0.4"
colored = "3.0.0"
regex = "1.11.1"

# Serialization & Storage
serde = { version = "1.0.219", features = ["derive"] }
ron = "0.10.1"
toml = "0.9.0"
md5 = "0.8.0"

# Async & Networking
tokio = { version = "1.46.1", features = ["full"] }
async-trait = "0.1.88"

# Logging
log = "0.4.27"
env_logger = "0.10.2"

# Windows API
winapi = { version = "0.3.9", features = ["fileapi", "winbase", "winnt"] }

[workspace]
members = [
    "cli"
]

[workspace.package]
version = "0.1.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false