[package]
name = "jam_ready_cli"
edition = "2024"
version.workspace = true

[dependencies]
jam_ready = { path = "../../JamReady" }

# Terminal
clearscreen = "4.0.2"
colored = "3.0.0"
strip-ansi-escapes = "0.2.1"
walkdir = "2.5.0"

# System Information
sysinfo = "0.36.1"

# Command Line
clap = { version = "4.5.38", features = ["derive"] }

# Logging
log = "0.4.27"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.140"
bincode = { version = "2.0.1", features = ["serde"] }

# Async & Networking
tokio = { version = "1.46.1", features = ["full"] }
local_ipaddress = "0.1.3"
async-trait = "0.1.88"

# Progress Bar
indicatif = "0.18.0"

# UUID
uuid = { version = "1.17.0", features = ["serde", "v4"] }

# Enum
strum = "0.27.1"
strum_macros = "0.27.1"

# Random Number
rand = "0.9.1"

# String
regex = "1.11.1"

[build-dependencies]
walkdir = "2.5.0"